syntax = "proto3";

package btc_adapter;

import "bitcoin/v1/bitcoin.proto";

service BtcAdapter {
    rpc GetSuccessors(bitcoin.v1.GetSuccessorsRequest) returns (bitcoin.v1.GetSuccessorsResponse);
    rpc SendTransaction(bitcoin.v1.SendTransactionRequest) returns (bitcoin.v1.SendTransactionResponse);
}
